[clang-format] update spec from xt and apply it

--- a/.clang-format-3.8
+++ b/.clang-format-3.8
@@ -5,9 +5,9 @@
 # Authors:
 #   Felix Schindler (2010, 2013, 2016)
 #
-# http://llvm.org/releases/3.7.0/tools/clang/docs/ClangFormatStyleOptions.html
+# http://llvm.org/releases/3.8.0/tools/clang/docs/ClangFormatStyleOptions.html
 AlignAfterOpenBracket: true
-AlignConsecutiveAssignments: true
+AlignConsecutiveAssignments: false
 AlignEscapedNewlinesLeft: false
 AlignOperands: true
 AlignTrailingComments: false
@@ -18,11 +18,12 @@ AllowShortFunctionsOnASingleLine: Empty
 AllowShortIfStatementsOnASingleLine: false
 AllowShortLoopsOnASingleLine: false
 AlwaysBreakAfterDefinitionReturnType: None
+AlwaysBreakAfterReturnType: None
 AlwaysBreakBeforeMultilineStrings: false
 AlwaysBreakTemplateDeclarations: true
 BasedOnStyle: Mozilla
 BinPackArguments: false
-BinPackParameters: true # this applies to template arguments, function arguments and typedefs, so we cannot set this to false (very much unfortunately)!
+BinPackParameters: false # this applies to template arguments
 BreakBeforeBinaryOperators: NonAssignment
 BreakBeforeBraces: Mozilla
 BreakBeforeTernaryOperators: true
