Add Gitter link

--- a/README
+++ b/README
@@ -26,3 +26,5 @@ examples are located in 'dune/gdt/test/'...
 
 If you want to start hacking go ahead and fork us on github.com:
 https://github.com/dune-community/dune-gdt/
+
+Join the chat at https://gitter.im/dune-community/dune-gdt
